# RS-RP-2040-QS

./: Cargo.toml  defmt_print.bat  defmt_print.sh  rp2040.svd
.cargo/: config
